# WEB_messanger

./: .envrc  .gitignore  README.md  alembic.ini  pyproject.toml  requierments.txt
migrations/: env.py
migrations/versions/: 4213429790c8_users_table.py  9368fd1932c6_users_table.py  e500a3058cc7_access_token_table.py
src/: config.py  database_models.py  db.py  main.py  routers.py
src/api/: __init__.py  auth.py  fastapi_users_router.py  user.py
src/auth/: transport.py
src/authentication/: access_token.py  strategy.py  transport.py  user.py
src/backend/: main.py
src/dependencies/: access_token.py  access_tokens.py  backend.py  strategy.py  transport.py  user_manager.py  users.py
src/endpoints/: pages.py
src/frontend/pages/: login.html  registry.html
src/frontend/scripts/: script.js
src/frontend/styles/: styles.css
src/models/: __init__.py  access_token.py  user.py
src/static/: styles.css
src/templates/: base.html  login.html  registry.html
