[project]
name = "web_messanger"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexander Klimov", email = "alexandrklimov04@gmail.com"},
]
dependencies = ["fastapi[all]>=0.115.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
