[project]
name = "web_messanger"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Alexander Klimov", email = "alexandrklimov04@gmail.com" },
]
dependencies = [
    "fastapi[all]>=0.115.5",
    "alembic>=1.14.0",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "asyncpg>=0.30.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10"
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
